update test 2 Login Discord

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mybotlist",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:8000",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
