add test service in Cookies Set and Get

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -51,5 +52,4 @@
       "last 1 safari version"
     ]
   }
-
 }
