--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "homepage": "https://portalmybot.com",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:8000",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@material-ui/core": "^4.11.2",
