--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mybotlist",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://portalmybot.com",
+  "homepage": "https://portalmybot.com/list",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@material-ui/core": "^4.11.2",
