--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "notistack": "^1.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-query": "^3.9.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
