--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://portalmybot.com/list",
   "dependencies": {
+    "@ctrl/react-adsense": "^1.3.1",
     "@hapi/joi": "^17.1.1",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
